--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
 @import "assets/scss/_datepicker-custom.scss";
 @import "assets/scss/_notifications";
 @import "assets/scss/_customer-view.scss";
+@import "assets/scss/_transaction-view.scss";
 
 /***************
   HTML Styles
