--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -1,4 +1,5 @@
 <div class="customer-view__table">
+  <md-input class="customer-view__table__filter" placeholder="Filter" [(ngModel)]="filterValue"></md-input>
   <table class="highlight">
     <thead>
     <tr>
@@ -11,7 +12,7 @@
     </thead>
 
     <tbody>
-    <tr *ngFor="let entity of entities | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
+    <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <td *ngFor="let params of columnParams">{{params.mappingFunction(entity)}}</td>
       <td>
         <table-actions
