--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -17,28 +17,12 @@
         <span>{{entity.affiliateId}}</span>
       </div>
       <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Sub ID 1:</span>
-        <span>{{entity.subId1}}</span>
+        <span class="entity-view__content__fields__item__label">Created At:</span>
+        <span>{{entity.createdAt.format()}}</span>
       </div>
       <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Sub ID 2:</span>
-        <span>{{entity.subId2}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Sub ID 3:</span>
-        <span>{{entity.subId3}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Sub ID 4:</span>
-        <span>{{entity.subId4}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Sub ID 5:</span>
-        <span>{{entity.subId5}}</span>
-      </div>
-      <div class="entity-view__content__fields__item">
-        <span class="entity-view__content__fields__item__label">Click ID:</span>
-        <span>{{entity.clickId}}</span>
+        <span class="entity-view__content__fields__item__label">Updated At:</span>
+        <span>{{entity.updatedAt.format()}}</span>
       </div>
     </div>
   </div>
