--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -13,7 +13,7 @@
 
     <tbody>
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
-      <td *ngFor="let params of columnParams">{{params.mappingFunction(entity)}}</td>
+      <td *ngFor="let params of columnParams" [routerLink]="['/rebills', entity.id]">{{params.mappingFunction(entity)}}</td>
       <td>
         <table-actions
           [service]="service">
