--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -1,15 +1,168 @@
 .dashboard {
-  margin: auto;
-  padding-top: 20px;
+  padding: 20px;
 
-  @media #{$large-and-up} {
-    width: 90%;
-    max-width: none;
+  &__filters {
+    display: inline-block;
+    width: 50%;
+    padding: 20px 50px;
+    box-sizing: border-box;
+    background: white;
+
+    @media only screen and (max-width: 1440px) {
+      width: 65%;
+    }
+
+    &__date {
+      display: flex;
+      font-size: 12px;
+
+      &__quick {
+        &__item {
+          padding: 0 8px;
+          color: rgba(0, 0, 0, 0.5);
+          cursor: pointer;
+
+          &--active {
+            padding-bottom: 3px;
+            border-bottom: 2px solid black;
+            color: black;
+          }
+        }
+      }
+
+      &__range {
+        margin-left: auto;
+
+        &__value {
+          display: inline-block;
+          margin: 2px;
+          width: 80px;
+          border-bottom: 1px solid rgba(0,0,0,0.2);
+          font-size: 11px;
+          color: rgba(0,0,0,0.5);
+          cursor: pointer;
+        }
+      }
+    }
+
+    &__label {
+      margin: 50px 0 3px 5px;
+      font-size: 14px;
+    }
+
+    &__input {
+      .md-input-wrapper {
+        margin-top: 0;
+
+        .md-input-table {
+          display: flex;
+          flex-flow: row;
+          align-items: flex-end;
+          height: 35px;
+
+          .md-input-prefix {
+            max-width: 70%;
+          }
+        }
+      }
+
+      &__prefix {
+        display: flex;
+        flex-wrap: wrap;
+
+        &__item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          flex-grow: 1;
+          margin: 2px;
+          height: 30px;
+          border-radius: 20px;
+          background: rgba(0, 0, 0, 0.1);
+
+          &__image {
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            border-radius: 20px;
+            background-color: #F16C00;
+            text-align: center;
+            color: white;
+          }
+
+          &__text {
+            margin: 5px;
+            font-size: 12px;
+          }
+
+          md-icon {
+            margin-right: 5px;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: gray;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .md-input-underline {
+        .md-input-ripple {
+          background-color: #F16C00;
+        }
+      }
+    }
   }
 
-  @media #{$medium-and-down} {
-    width: 95%;
+  &__chart {
+    margin-top: 20px;
+    width: 50%;
+    background-color: white;
+
+    @media only screen and (max-width: 1440px) {
+      width: 65%;
+    }
+
+    &__title {
+      position: relative;
+      padding: 20px 10px 10px;
+
+      &__main {
+        margin-bottom: 5px;
+        font-size: 18px;
+      }
+
+      &__sub {
+        font-size: 12px;
+        color: rgba(0,0,0,0.6);
+      }
+
+      md-icon {
+        position: absolute;
+        right: 10px;
+        top: 16px;
+        width: 20px;
+        height: 20px;
+        font-size: 20px;
+        cursor: pointer;
+      }
+    }
+
+    .highcharts-container {
+      width: 100% !important;
+      height: 100% !important;
+
+      .highcharts-root {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
+}
+
+.dashboard {
 
   &__widgets {
     display: inline-block;
