Make dashboard date filter responsive and add more data for chart

--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -1,20 +1,32 @@
 .dashboard {
+  display: flex;
+  flex-wrap: wrap;
   padding: 20px;
 
   &__filters {
-    display: inline-block;
-    width: 50%;
-    padding: 20px 50px;
+    display: flex;
+    width: 100%;
+    padding: 0 50px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
     box-sizing: border-box;
     background: white;
 
     @media only screen and (max-width: 1440px) {
+      flex-wrap: wrap;
       width: 65%;
+      padding: 20px 50px;
     }
 
     &__date {
       display: flex;
+      align-items: center;
+      width: 45%;
+      margin-right: 5px;
       font-size: 12px;
+
+      @media only screen and (max-width: 1440px) {
+        width: 100%;
+      }
 
       &__quick {
         &__item {
@@ -45,72 +57,83 @@
       }
     }
 
-    &__label {
-      margin: 50px 0 3px 5px;
-      font-size: 14px;
-    }
 
-    &__input {
-      .md-input-wrapper {
-        margin-top: 0;
+    &__query {
+      padding-top: 5px;
+      margin-left: auto;
+      max-width: 50%;
 
-        .md-input-table {
-          display: flex;
-          flex-flow: row;
-          align-items: flex-end;
-          height: 35px;
-
-          .md-input-prefix {
-            max-width: 70%;
-          }
-        }
+      @media only screen and (max-width: 1440px) {
+        margin: 50px 0 0 0;
+        max-width: 100%;
       }
 
-      &__prefix {
-        display: flex;
-        flex-wrap: wrap;
+      &__label {
+        font-size: 12px;
+      }
 
-        &__item {
+      &__input {
+        .md-input-wrapper {
+          margin-top: 0;
+
+          .md-input-table {
+            display: flex;
+            flex-flow: row;
+            align-items: flex-end;
+            height: 35px;
+
+            .md-input-prefix {
+              max-width: 70%;
+            }
+          }
+        }
+
+        &__prefix {
           display: flex;
-          align-items: center;
-          justify-content: space-between;
-          flex-grow: 1;
-          margin: 2px;
-          height: 30px;
-          border-radius: 20px;
-          background: rgba(0, 0, 0, 0.1);
+          flex-wrap: wrap;
 
-          &__image {
-            width: 30px;
+          &__item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-grow: 1;
+            margin: 2px;
             height: 30px;
-            line-height: 30px;
             border-radius: 20px;
-            background-color: #F16C00;
-            text-align: center;
-            color: white;
-          }
+            background: rgba(0, 0, 0, 0.1);
 
-          &__text {
-            margin: 5px;
-            font-size: 12px;
-          }
+            &__image {
+              width: 30px;
+              height: 30px;
+              line-height: 30px;
+              border-radius: 20px;
+              background-color: #F16C00;
+              text-align: center;
+              color: white;
+            }
 
-          md-icon {
-            margin-right: 5px;
-            width: 16px;
-            height: 16px;
-            border-radius: 50%;
-            background: gray;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
+            &__text {
+              margin: 5px;
+              font-size: 12px;
+            }
+
+            md-icon {
+              margin-right: 5px;
+              width: 16px;
+              height: 16px;
+              border-radius: 50%;
+              background: gray;
+              color: white;
+              font-size: 16px;
+              cursor: pointer;
+            }
           }
         }
-      }
 
-      .md-input-underline {
-        .md-input-ripple {
-          background-color: #F16C00;
+        .md-input-underline {
+          .md-input-ripple {
+            background-color: #F16C00;
+          }
         }
       }
     }
@@ -119,6 +142,7 @@
   &__chart {
     margin-top: 20px;
     width: 50%;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
     background-color: white;
 
     @media only screen and (max-width: 1440px) {
