Fetch transactions summary analitics and filters on dashboard.

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -6,26 +6,37 @@
         <span *ngFor="let dateFilter of dateFilters; let i = index"
               class="dashboard__filters__date__quick__item"
               [class.dashboard__filters__date__quick__item--active]="activeDataFilterIndex===i"
-              (click)="setActiveDateFilterIndex(i)">{{dateFilter.label}}</span>
+              (click)="setActiveDateFilterIndex(i)"
+              [class.dashboard__filter__data__quick__item--disabled]="dateFilter.label === 'CUSTOM'">{{dateFilter.label}}</span>
       </div>
       <div class="dashboard__filters__date__range">
-        <span class="dashboard__filters__date__range__label">From</span>
-        <span class="dashboard__filters__date__range__value">{{dateFilters[activeDataFilterIndex].start.format('MMM D, YYYY')}}</span>
-
-        <span class="dashboard__filters__date__range__label">To</span>
-        <span class="dashboard__filters__date__range__value">{{dateFilters[activeDataFilterIndex].end.format('MMM D, YYYY')}}</span>
+        <div class="datepicker--custom" [class.datepicker-visible]="datepickerVisible">
+          <div (showDaterangepicker)="datepickerVisible = true" (hideDaterangepicker)="datepickerVisible = false" (selected)="dateSelected($event)" daterangepicker>
+            <div class="dashboard__filters__date__range__input" name="daterange" >
+              <span>From <span class="dashboard__filters__date__range__input__value">{{ getStartDate().format('MMM D, YYYY') }}</span>
+                    To <span class="dashboard__filters__date__range__input__value">{{ getEndDate().format('MM D, YYYY') }}</span>
+              </span> <md-icon>keyboard_arrow_down</md-icon> </div>
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="dashboard__filters__query">
       <div class="dashboard__filters__query__label">Filters</div>
       <div class="dashboard__filters__query__input">
-        <md-input [value]="currentFilterTerm" (input)="filterTermInput($event)" (keydown)="onFilterKey($event)">
+        <md-input [value]="currentFilterTerm" (input)="filterTermInput($event)" (blur)="filterTermInputBlur()" (focus)="filterTermInputFocus()">
           <div class="dashboard__filters__query__input__prefix" md-prefix>
             <div *ngFor="let filterTerm of filterTerms" class="dashboard__filters__query__input__prefix__item">
               <div class="dashboard__filters__query__input__prefix__item__image">C</div>
-              <div class="dashboard__filters__query__input__prefix__item__text">{{filterTerm}}</div>
+              <div class="dashboard__filters__query__input__prefix__item__text">{{filterTerm.label}}</div>
               <md-icon class="dashboard__filters__query__input__prefix__item__close" (click)="removeFilterTerm(filterTerm)">close</md-icon>
+            </div>
+
+            <div class="dashboard__filters__query__suggestions">
+              <div class="dashboard__filters__query__suggestions__item" *ngFor="let suggestion of filterSearchResults" (click)="addFilterTerm(suggestion)">
+                <div class="dashboard__filters__query__suggestions__item__image">{{suggestion.type.substring(0,1).toUpperCase()}}</div>
+                <div class="dashboard__filters__query__suggestions__item__text">{{suggestion.label}}</div>
+              </div>
             </div>
           </div>
         </md-input>
@@ -40,6 +51,6 @@
       <md-icon>more_vert</md-icon>
     </div>
 
-    <chart type="StockChart" [options]="chartOptions"></chart>
+    <chart type="StockChart" [options]="chartOptions" (load)="saveChart($event.context)"></chart>
   </div>
 </div>
