--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.html
@@ -12,7 +12,7 @@
       <div class="transaction-view__info__data">
         <div class="transaction-view__info__data__date">Created: {{entity.createdAt.format('MM/DD/YYYY')}} <span>{{entity.createdAt.format('HH:mm')}}</span></div>
         <div class="transaction-view__info__data__name">{{entity.alias}}</div>
-        <div class="transaction-view__info__data__other">Merchant processor:</div>
+        <div class="transaction-view__info__data__other">Merchant processor: {{entity.merchantProvider}}</div>
       </div>
     </div>
 
